--- a/app/src/main/res/drawable/button_rounded_corners.xml
+++ b/app/src/main/res/drawable/button_rounded_corners.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="@dimen/padding_ten"
+    android:padding="@dimen/start_button_padding"
     android:shape="rectangle">
     <solid android:color="@color/defaultBlack" />
-    <corners android:radius="@dimen/radius_corners" />
+    <corners android:radius="@dimen/start_button_radius_corners" />
 </shape>
