--- a/app/src/main/res/layout/activity_starting_screen.xml
+++ b/app/src/main/res/layout/activity_starting_screen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,38 +7,41 @@
     tools:context="com.example.android.cordcalculator.StartingScreenActivity"
     android:background="@drawable/gradient_background">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    <TextView
+        android:id="@+id/welcome_text_view"
+        android:text="@string/welcome_text"
+        app:layout_constraintBottom_toTopOf="@id/full_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/welcome_text_view" />
 
-        <TextView
-            android:id="@+id/string_welcome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/welcome"
-            style="@style/welcome_text" />
+    <ImageView
+        android:id="@+id/full_logo"
+        android:src="@drawable/bobbiny_full_logo"
+        app:layout_constraintBottom_toTopOf="@+id/motto_text_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/welcome_text_view"
+        style="@style/full_logo_image_view" />
 
-        <ImageView
-            android:id="@+id/logo_start_screen"
-            android:src="@drawable/bobbiny_full_logo"
-            style="@style/logo_start_screen"/>
+    <TextView
+        android:id="@+id/motto_text_view"
+        android:text="@string/motto_text"
+        app:layout_constraintBottom_toTopOf="@+id/button_start"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/full_logo"
+        style="@style/motto_text_view"/>
 
-        <TextView
-            android:id="@+id/motto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/company_motto"
-            style="@style/company_motto"/>
+    <Button
+        android:id="@+id/button_start"
+        android:text="@string/start_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/motto_text_view"
+        style="@style/button_start"
+        android:onClick="startProcess"/>
 
-        <Button
-            android:id="@+id/start_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/start"
-            style="@style/button_start"
-            android:onClick="openFirstStep" />
-
-    </LinearLayout>
-
-</ScrollView>
+</android.support.constraint.ConstraintLayout>
