--- a/app/src/main/res/layout/activity_main_layout.xml
+++ b/app/src/main/res/layout/activity_main_layout.xml
@@ -4,54 +4,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.cordcalculator.MainLayoutActivity"
-    android:background="@drawable/gradient_background">
+    android:background="@drawable/gradient_background"
+    tools:context="com.example.android.cordcalculator.MainLayoutActivity">
 
     <View
         android:id="@+id/dashed_line"
+        style="@style/vertical_dashed_line"
         android:background="@color/defaultBlack"
+        app:layout_constraintBottom_toBottomOf="@id/image_step_four"
         app:layout_constraintEnd_toEndOf="@id/bookmark_image"
         app:layout_constraintStart_toStartOf="@id/bookmark_image"
-        app:layout_constraintTop_toTopOf="@id/bookmark_image"
-        style="@style/vertical_dashed_line"/>
+        app:layout_constraintTop_toTopOf="@id/bookmark_image" />
 
     <ImageView
         android:id="@+id/bookmark_image"
+        style="@style/bookmark_image"
+        android:src="@drawable/bookmark"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        style="@style/bookmark_image"
         android:contentDescription="@string/bookmark_image_description"/>
 
     <ImageView
         android:id="@+id/image_step_one"
+        style="@style/image_step_number"
+        android:src="@drawable/one_active"
         app:layout_constraintEnd_toEndOf="@id/bookmark_image"
         app:layout_constraintStart_toStartOf="@id/bookmark_image"
         app:layout_constraintTop_toBottomOf="@id/bookmark_image"
-        style="@style/image_step_number"
         android:contentDescription="@string/step_image_description"/>
 
     <ImageView
         android:id="@+id/image_step_two"
+        style="@style/image_step_number"
+        android:src="@drawable/two_active"
         app:layout_constraintEnd_toEndOf="@id/bookmark_image"
         app:layout_constraintStart_toStartOf="@id/bookmark_image"
         app:layout_constraintTop_toBottomOf="@id/image_step_one"
-        style="@style/image_step_number"
-        android:contentDescription="@string/step_image_description"/>
+        android:contentDescription="@string/step_image_description" />
 
     <ImageView
         android:id="@+id/image_step_three"
+        style="@style/image_step_number"
+        android:src="@drawable/three_active"
         app:layout_constraintEnd_toEndOf="@id/bookmark_image"
         app:layout_constraintStart_toStartOf="@id/bookmark_image"
         app:layout_constraintTop_toBottomOf="@id/image_step_two"
-        style="@style/image_step_number"
-        android:contentDescription="@string/step_image_description"/>
+        android:contentDescription="@string/step_image_description" />
 
     <ImageView
         android:id="@+id/image_step_four"
+        style="@style/image_step_number"
+        android:src="@drawable/four_active"
         app:layout_constraintEnd_toEndOf="@id/bookmark_image"
         app:layout_constraintStart_toStartOf="@id/bookmark_image"
         app:layout_constraintTop_toBottomOf="@id/image_step_three"
-        style="@style/image_step_number"
-        android:contentDescription="@string/step_image_description"/>
+        android:contentDescription="@string/step_image_description" />
 
 </android.support.constraint.ConstraintLayout>
