--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,6 +33,8 @@
     <style name="button_start" parent="defaultButtonStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingStart">@dimen/start_button_padding_left_right</item>
+        <item name="android:paddingEnd">@dimen/start_button_padding_left_right</item>
     </style>
 
     <!-- Main screen of the app -->
@@ -40,11 +42,12 @@
     <style name="vertical_dashed_line">
         <item name="android:layout_width">@dimen/dashed_line_width</item>
         <item name="android:layout_height">@dimen/dashed_line_height</item>
+        <item name="android:layout_marginBottom">@dimen/dashed_line_margin_bottom</item>
     </style>
 
     <style name="bookmark_image">
-        <item name="android:layout_width">@dimen/bookmark_image_size</item>
-        <item name="android:layout_height">@dimen/bookmark_image_size</item>
+        <item name="android:layout_width">@dimen/bookmark_image_width</item>
+        <item name="android:layout_height">@dimen/bookmark_image_height</item>
         <item name="android:layout_marginStart">@dimen/bookmark_image_margin</item>
         <item name="android:scaleType">fitCenter</item>
     </style>
@@ -62,5 +65,4 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
 </resources>
