--- a/app/src/main/res/layout/activity_second_question.xml
+++ b/app/src/main/res/layout/activity_second_question.xml
@@ -5,53 +5,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context=".FirstQuestion">
+    tools:context=".SecondQuestion">
 
     <TextView
-        android:id="@+id/first_step"
+        android:id="@+id/second_step"
         style="@style/question_text_view"
-        android:text="@string/first_step"
+        android:text="@string/second_step"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.AppCompatCheckBox
-        android:id="@+id/first_step_first_answer"
+        android:id="@+id/second_step_first_answer"
         style="@style/answer_checkbox"
-        android:text="@string/first_step_first_answer"
+        android:text="@string/second_step_first_answer"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/first_step"
+        app:layout_constraintTop_toBottomOf="@id/second_step"
         app:buttonTint="@color/defaultBlack"/>
 
     <android.support.v7.widget.AppCompatCheckBox
-        android:id="@+id/first_step_second_answer"
+        android:id="@+id/second_step_second_answer"
         style="@style/answer_checkbox"
-        android:text="@string/first_step_second_answer"
+        android:text="@string/second_step_second_answer"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/first_step_first_answer"
+        app:layout_constraintTop_toBottomOf="@id/second_step_first_answer"
         app:buttonTint="@color/defaultBlack"/>
 
     <android.support.v7.widget.AppCompatCheckBox
-        android:id="@+id/first_step_third_answer"
+        android:id="@+id/second_step_third_answer"
         style="@style/answer_checkbox"
-        android:text="@string/first_step_third_answer"
+        android:text="@string/second_step_third_answer"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/first_step_second_answer"
+        app:layout_constraintTop_toBottomOf="@id/second_step_second_answer"
         app:buttonTint="@color/defaultBlack"/>
 
     <android.support.v7.widget.AppCompatCheckBox
-        android:id="@+id/first_step_fourth_answer"
+        android:id="@+id/second_step_fourth_answer"
         style="@style/answer_checkbox"
-        android:text="@string/first_step_fourth_answer"
+        android:text="@string/second_step_fourth_answer"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/first_step_third_answer"
-        app:buttonTint="@color/defaultBlack"/>
-
-    <android.support.v7.widget.AppCompatCheckBox
-        android:id="@+id/first_step_fifth_answer"
-        style="@style/answer_checkbox"
-        android:text="@string/first_step_fifth_answer"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/first_step_fourth_answer"
+        app:layout_constraintTop_toBottomOf="@id/second_step_third_answer"
         app:buttonTint="@color/defaultBlack"/>
 
 </android.support.constraint.ConstraintLayout>
