--- a/app/src/main/res/layout/activity_main_layout.xml
+++ b/app/src/main/res/layout/activity_main_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -69,8 +68,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.15"
-        app:layout_constraintHorizontal_bias="0.75" />
+        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintVertical_bias="0.15" />
 
     <View
         android:id="@+id/underline_view"
@@ -94,5 +93,28 @@
             layout="@layout/activity_first_question" />
 
     </ViewFlipper>
+
+    <android.support.constraint.Barrier
+        android:id="@+id/barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="image_step_four,viewFlipper" />
+
+    <ImageButton
+        android:id="@+id/image_arrow_left"
+        app:srcCompat="@drawable/arrow_left"
+        style="@style/button_arrow_image_left"
+        app:layout_constraintStart_toStartOf="@+id/viewFlipper"
+        app:layout_constraintTop_toTopOf="@+id/barrier"
+        android:contentDescription="@string/arrow_image_button"/>
+
+    <ImageButton
+        android:id="@+id/image_arrow_right"
+        app:srcCompat="@drawable/arrow_right"
+        style="@style/button_arrow_image_right"
+        app:layout_constraintEnd_toEndOf="@+id/viewFlipper"
+        app:layout_constraintTop_toTopOf="@+id/barrier"
+        android:contentDescription="@string/arrow_image_button"/>
 
 </android.support.constraint.ConstraintLayout>
