--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_background"
-    tools:context="com.example.android.cordcalculator.MainLayoutActivity">
+    tools:context="com.bobbiny.cordcalculator.main.MainActivity">
 
     <View
         android:id="@+id/dashed_line"
