--- a/app/src/main/res/layout/activity_second_question.xml
+++ b/app/src/main/res/layout/activity_second_question.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context=".SecondQuestion">
+    tools:context="com.bobbiny.cordcalculator.SecondQuestion">
 
     <TextView
         android:id="@+id/second_step"
