--- a/app/src/main/res/layout/activity_starting_screen.xml
+++ b/app/src/main/res/layout/activity_starting_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.cordcalculator.StartingScreenActivity"
+    tools:context="com.bobbiny.cordcalculator.StartingScreenActivity"
     android:background="@drawable/gradient_background">
 
     <TextView
