--- a/app/src/main/res/layout/activity_third_question.xml
+++ b/app/src/main/res/layout/activity_third_question.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context=".ThirdQuestion">
+    tools:context="com.bobbiny.cordcalculator.ThirdQuestion">
 
     <TextView
         android:id="@+id/third_step"
