--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,9 @@
 <resources>
+    <!-- Launch screen theme. -->
+    <style name="AppTheme.Launcher" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/launch_layout_screen</item>
+    </style>
+
     <!-- Basic style for the app -->
     <style name="basicTextStyle">
         <item name="android:textColor">@color/defaultBlack</item>
